changed fetch repo button color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         id="usernameInput"
         placeholder="Enter GitHub username"
       />
-      <button onclick="fetchRepositories()">Fetch Repositories</button>
+      <button id="fetch-repo" onclick="fetchRepositories()">
+        Fetch Repositories
+      </button>
     </header>
 
     <main>
