handle 4xx appropriately

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </button>
     </header>
 
-    <main>
+    <main id="main">
       <div id="user-details-container" class="hidden">
         <div class="user-details">
           <div>
@@ -37,6 +37,7 @@
           <div id="pagination"></div>
         </div>
       </div>
+      <div id="error-container" class="hidden"></div>
     </main>
 
     <script src="script.js"></script>
