--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </header>
 
     <main id="main">
+      <div id="loader" class="hidden"></div>
       <div id="user-details-container" class="hidden">
         <div class="user-details">
           <div>
