fix error message

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         id="usernameInput"
         placeholder="Enter GitHub username"
       />
-      <button id="fetch-repo" onclick="fetchRepositories()">
+      <button id="fetch-repo" onclick="getDetails()">
         Fetch Repositories
       </button>
     </header>
