added a readme and refactored the logics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>GitHub Repositories</title>
   </head>
   <body>
+    <script type="module" src="script.js"></script>
     <header>
       <h1>GitHub Repositories</h1>
       <input
@@ -50,7 +51,5 @@
       </div>
       <div id="error-container" class="hidden"></div>
     </main>
-
-    <script src="script.js"></script>
   </body>
 </html>
